--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
-/*------Google Fonts----- */
-html{
-    
+/* ------Google Fonts----- */
+ 
+*{
+    font-family:'Times New Roman', Times,sans-serif serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root{
+    --blue:var(--blue)
 }
